Rigid bodies in duplicated collections are not automatically added to Rigid Body World #65674

Closed
opened 2019-06-09 23:05:16 +02:00 by Phil · 3 comments

System Information
Operating system: Linux Mint 19.1 XFCE
Graphics card: Nvidia GTX 970 4G

Blender Version
blender-2.80-81b68f7279cd-linux-glibc224-x86_64

Duplicating a collection that contains one or more rigid bodies creates duplicated rigid bodies, but the duplicated rigid bodies are not automatically added to the Rigid Body World collection, so they do not participate in the physics simulation.

Create a mesh object and set it as either a passive or active rigid body.
Create a new collection and move the rigid body object into the new collection. Playing the animation results in the rigid body falling.
Duplicate the collection. This also duplicates the rigid body.
Move the original rigid body so both rigid bodies can be seen.
Play the animation.
The original rigid body falls but the duplicated rigid body does not.
The 'Outliner' display section Collections->RigidBodyWorld->All Objects shows that only the original rigid body is in the Rigid Body World.

system-info.txt

2019-06-10_06-45-40.blend

**System Information** Operating system: Linux Mint 19.1 XFCE Graphics card: Nvidia GTX 970 4G **Blender Version** blender-2.80-81b68f7279cd-linux-glibc224-x86_64 Duplicating a collection that contains one or more rigid bodies creates duplicated rigid bodies, but the duplicated rigid bodies are not automatically added to the Rigid Body World collection, so they do not participate in the physics simulation. Create a mesh object and set it as either a passive or active rigid body. Create a new collection and move the rigid body object into the new collection. Playing the animation results in the rigid body falling. Duplicate the collection. This also duplicates the rigid body. Move the original rigid body so both rigid bodies can be seen. Play the animation. The original rigid body falls but the duplicated rigid body does not. The 'Outliner' display section Collections->RigidBodyWorld->All Objects shows that only the original rigid body is in the Rigid Body World. [system-info.txt](https://archive.blender.org/developer/F7096692/system-info.txt) [2019-06-10_06-45-40.blend](https://archive.blender.org/developer/F7096693/2019-06-10_06-45-40.blend)
Author

Added subscriber: @Philstix

Added subscriber: @Philstix
Bastien Montagne was assigned by Sebastian Parborg 2019-06-17 12:40:38 +02:00

This issue was referenced by e0b8dccd62

This issue was referenced by e0b8dccd623a39fe0bcc351484483932fde9d310

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65674
No description provided.