Fix T65674: Rigid bodies in duplicated collections are not automatically added to Rigid Body World.

As title says, we need to add back new copies of objects that are RB
items to the RBW collections...